--- a/main.html
+++ b/main.html
@@ -6,7 +6,17 @@
 	<link rel="stylesheet" href="styles.css">
 </head>
 
-<body>
+<body class="b">
+	<div>
+		<h1  id="f1">Flower photos</h1>
+		<img src="https://images.unsplash.com/photo-1597083307810-1de76d5cfe12?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8Zm93ZXJzfGVufDB8fDB8fHww&auto=format&fit=crop&w=600&q=60" width="100px" height="150px">
+		<p>This flower is like a additional atractive to the nature which is gifted by god </p>
+	</div>
+	<div>
+		<h1 id="f2">Roses pictures</h1>
+		<img src="https://images.unsplash.com/photo-1582794543139-8ac9cb0f7b11?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NHx8cm9zZXN8ZW58MHx8MHx8fDA%3D&auto=format&fit=crop&w=600&q=60"width="100px" height="150px">
+		<p>this is the flower which is called as symbole of love </p>
+	</div>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
