--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
 
 <body class="b">
 	<div>
-		<h1  id="f1">Flower photos</h1>
+		<h1  id="f1">Flowers photos</h1>
 		<img src="https://images.unsplash.com/photo-1597083307810-1de76d5cfe12?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8Zm93ZXJzfGVufDB8fDB8fHww&auto=format&fit=crop&w=600&q=60" width="100px" height="150px">
 		<p>This flower is like a additional atractive to the nature which is gifted by god </p>
 	</div>
